--- a/src/Pages/ItemDetail/ItemDetail.scss
+++ b/src/Pages/ItemDetail/ItemDetail.scss
@@ -1,1 +1,46 @@
 @import '../../Styles/common.scss';
+
+.itemDetail {
+  font-family: $notoSans;
+  width: 1020px;
+  margin: 0 auto;
+
+  .detailMain {
+    display: flex;
+  }
+  b {
+    font-weight: bold;
+  }
+
+  nav {
+    padding: 10px 0;
+    @include flex(space-between, center);
+
+    .share {
+      display: flex;
+
+      li {
+        width: 29px;
+        height: 29px;
+        @include flex(center, center);
+        margin-right: 6px;
+
+        button {
+          width: 100%;
+          height: 100%;
+          background: url('https://ssl.pstatic.net/static/common/spi/2020/0806/sp_spi_pc.png')
+            no-repeat;
+        }
+
+        &.release {
+          border: 1px solid rgba(237, 237, 237, 0.7);
+
+          button {
+            width: 16px;
+            height: 16px;
+          }
+        }
+      }
+    }
+  }
+}
