--- a/src/Styles/common.scss
+++ b/src/Styles/common.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;500;700&display=swap');
+$notoSans: 'Noto Sans KR', sans-serif;
 @mixin flex($justify: null, $align: null, $direction: null) {
   display: flex;
   flex-direction: $direction;
