--- a/src/Pages/Main/Main.scss
+++ b/src/Pages/Main/Main.scss
@@ -1,1 +1,41 @@
 @import '../../Styles/common.scss';
+@import '../../Styles/reset.scss';
+
+// .mainSlideshowContainer {
+//   background-color: aquamarine;
+// }
+
+.Main {
+  font-family: $notoSans;
+}
+
+.mainSlideshowContainer {
+}
+
+img {
+  width: 100%;
+  height: 744px;
+}
+
+.slide {
+  .slick-prev {
+    left: 3%;
+    z-index: 1;
+  }
+  .slick-next {
+    right: 3%;
+    z-index: 1;
+  }
+  .slick-dots {
+    margin-bottom: 50px;
+  }
+}
+
+.mainSlidePanel {
+  //   img {
+  //     width: 100%;
+  //     height: 774px;
+  //     position: relative;
+  //     margin: auto;
+  //   }
+}
