--- a/src/Pages/ItemList/ItemList.scss
+++ b/src/Pages/ItemList/ItemList.scss
@@ -1,6 +1,8 @@
 @import '../../Styles/common.scss';
+@import '../../Styles/reset.scss';
 
 .itemListContainer {
-  margin: 0 auto;
-  @include flex(center, null, column);
+  width: 1325px;
+  margin: 256px auto;
+  @include flex(center, flex-start, column);
 }
