--- a/src/Pages/ItemList/ListBox/ListBox.scss
+++ b/src/Pages/ItemList/ListBox/ListBox.scss
@@ -3,34 +3,42 @@
 .listBox {
   list-style: none;
   width: 1350px;
-  padding: 50px 10px;
+  padding: 0 10px 50px;
   @include flex(null, null, row);
   flex-wrap: wrap;
+
   .itemBox {
     @include flex(center, null, column);
     width: 262px;
     padding: 0 15px;
     margin: 20px 0;
+
     .image {
       width: 232px;
       height: 232px;
       position: relative;
+
       img {
         width: 100%;
       }
+
       .imageButtonBox {
         position: absolute;
-        top: 162px;
-        left: 50%;
+        top: 0;
+        padding: 162px 61px 100px;
+        left: 0;
         z-index: 1;
-        margin-left: -54px;
+        opacity: 0%;
+        transition: opacity 0.8s;
         @include flex(space-between, center, null);
+
         .likeButtonBox {
           width: 50px;
           height: 50px;
           border-radius: 50%;
           background-color: white;
           @include flex(center, center, null);
+
           .imageInnerLike {
             width: 21px;
             height: 19px;
@@ -40,6 +48,7 @@
             content: '';
           }
         }
+
         .viewButtonBox {
           margin-left: 8px;
           width: 50px;
@@ -48,11 +57,17 @@
           background-color: white;
           @include flex(center, center, null);
         }
+
+        &:hover {
+          opacity: 100%;
+        }
       }
     }
+
     .itemName {
       @include flex(null, center, null);
       margin-top: 14px;
+
       .name {
         font-size: 13px;
         line-height: 16px;
@@ -62,6 +77,7 @@
         white-space: nowrap;
         padding-right: 16px;
       }
+
       .like {
         width: 17px;
         height: 14px;
@@ -70,27 +86,33 @@
         background-position: auto;
       }
     }
+
     .itemPrice {
       margin-top: 3px;
+
       .price {
         font-size: 13px;
         line-height: 17px;
         font-weight: bold;
       }
     }
+
     .reviewGrade {
       margin-top: 20px;
       font-size: 12px;
       line-height: 13px;
+
       .review {
         color: #8f8f8f;
         margin-right: 4px;
       }
+
       .grade {
         position: relative;
         color: #8f8f8f;
         margin-left: 14px;
         margin-right: 4px;
+
         &::after {
           //before이 아니라 after로 했을때 생기는지 의문..
           position: absolute;
@@ -103,14 +125,17 @@
           content: '';
         }
       }
+
       .value {
         color: #6b90dc;
       }
+
       .slash {
         color: #8f8f8f;
         margin: auto 1px;
       }
     }
+
     .soldout {
       margin-top: 16px;
       font-size: 12px;
@@ -128,5 +153,9 @@
         text-align: center;
       }
     }
+  }
+
+  .noResult {
+    align-self: center;
   }
 }
