Add: 멘토 리뷰 반영 및 Detail 상단 레이아웃 및 기능 구현 - 데이터 통신이 필요없는 MockData는 페이지에서 변수로 관리 - Optional Chaining 활용 - fetch 함수 내에 GET 메소드 생략 - 사용이 끝난 console.log 삭제 - state 컨벤션에 맞춰 수정 - 옵션 선택시 총 금액 및 수량 변경 기능 구현 - 포토 리뷰 레이아웃 및 버튼 클릭 페이지 이동 기능 구현 - 포토 리뷰 클릭 시 팝업창 구현 - 베스트 상품 레이아웃 구현

--- a/src/Pages/ItemDetail/Components/ImageView/ImageView.scss
+++ b/src/Pages/ItemDetail/Components/ImageView/ImageView.scss
@@ -3,14 +3,14 @@
 .itemDetail {
   .imageView {
     width: 50%;
-    border: 1px solid rgba(237, 237, 237, 0.7);
+    border: $lightGrayBorder;
     overflow: hidden;
 
     .imageContainer {
+      @include flex(center);
       width: 510px;
       height: 510px;
-      @include flex(center);
-      border-bottom: 1px solid rgba(237, 237, 237, 0.7);
+      border-bottom: $lightGrayBorder;
     }
 
     .thumbnailContainer {
@@ -19,9 +19,9 @@
       cursor: pointer;
 
       li {
-        opacity: 0.6;
         @include flex(center, center);
         box-sizing: initial;
+        opacity: 0.6;
 
         &:not(:last-child) {
           margin-right: 4px;
