--- a/src/Pages/SignUp/SignUp.scss
+++ b/src/Pages/SignUp/SignUp.scss
@@ -3,58 +3,226 @@
   background-color: #f5f6f7;
 }
 
-.signUpLogoBorder {
-  text-align: center;
-  margin: 60px 0 40px 0;
+header {
+  .signUpLogoBorder {
+    text-align: center;
+    margin: 60px 0 40px 0;
+
+    .signUpLogo {
+      width: 250px;
+      height: 60px;
+      background-image: url('https://static.nid.naver.com/images/ui/login/t_sp_login_190522.png');
+      background-position: -150px -90px;
+      text-align: center;
+      padding: 30px 0 30px 0px;
+    }
+  }
 }
-.signUpLogo {
-  width: 250px;
-  height: 60px;
-  background-image: url('https://static.nid.naver.com/images/ui/login/t_sp_login_190522.png');
-  background-position: -150px -90px;
+
+main {
   text-align: center;
-  padding: 30px 0 30px 0px;
-}
-content {
+
   .signUpId {
     .signUpIdText {
       display: block;
+      text-align: left;
+      margin: 0 0 0 60px;
+      font: 14px bold;
     }
+
     .signUpIdInput {
+      width: 460px;
+      height: 51px;
+      margin: 15px 0 15px 0;
+      border: 1px solid #dadada;
+      background-color: white;
     }
   }
+
   .signUpPwd {
     .signUpPwdText {
       display: block;
+      text-align: left;
+      margin: 0 0 0 60px;
+      font: 14px bold;
     }
+
     .signUpPwdInput {
+      width: 460px;
+      height: 51px;
+      margin: 15px 0 15px 0;
+      border: 1px solid #dadada;
+      background-color: white;
     }
   }
+
   .signUpPwdRepeat {
     .signUpPwdTextRepeat {
       display: block;
+      text-align: left;
+      margin: 0 0 0 60px;
+      font: 14px bold;
     }
+
     .signUpPwdCheck {
+      width: 460px;
+      height: 51px;
+      margin: 15px 0 15px 0;
+      border: 1px solid #dadada;
+      background-color: white;
+    }
+
+    .equal {
+      display: none;
+    }
+
+    .isEqual {
       display: block;
     }
   }
+
   .signUpName {
     .signUpNameText {
       display: block;
+      text-align: left;
+      margin: 0 0 0 60px;
+      font: 14px bold;
     }
+
     .signUpNameInput {
-      display: block;
+      width: 460px;
+      height: 51px;
+      margin: 15px 0 15px 0;
+      border: 1px solid #dadada;
+      background-color: white;
     }
   }
+
   .signUpBday {
+    display: block;
+    text-align: left;
+    margin: 0 0 0 60px;
     .signUpBdayText {
     }
+
     .bDayYr {
       display: inline;
+      width: 146px;
+      height: 51px;
+      margin: 15px 0 15px 0;
+      border: 1px solid #dadada;
+      background-color: white;
     }
-    .month {
+
+    select {
+      display: inline;
+      width: 146px;
+      height: 51px;
+      margin: 15px 0 15px 13px;
+      border: 1px solid #dadada;
+      background-color: white;
     }
+
     .bDayDay {
+      display: inline;
+      width: 146px;
+      height: 51px;
+      margin: 15px 0 15px 14px;
+      border: 1px solid #dadada;
+      background-color: white;
     }
   }
+
+  .signUpSex {
+    .signUpSexText {
+      display: block;
+      text-align: left;
+      margin: 0 0 0 60px;
+      font: 14px bold;
+    }
+
+    select {
+      display: inline;
+      width: 460px;
+      height: 51px;
+      margin: 15px 0 15px 0;
+      border: 1px solid #dadada;
+      background-color: white;
+    }
+  }
+
+  .signUpEmail {
+    text-align: left;
+    margin: 0 0 0 60px;
+
+    .signUpemailText {
+      .signUpEmailText1 {
+        display: inline;
+      }
+
+      .signUpEmailText2 {
+        display: inline;
+        color: #fafafa;
+      }
+    }
+
+    .signUpEmailInput {
+      width: 460px;
+      height: 51px;
+      margin: 15px 0 15px 0;
+      border: 1px solid #dadada;
+      background-color: white;
+    }
+  }
+
+  .phoneNumber {
+    .phoneNumberText {
+      display: block;
+      text-align: left;
+      margin: 0 0 0 60px;
+      font: 14px bold;
+    }
+
+    .phoneNumberInput {
+      width: 460px;
+      height: 51px;
+      margin: 15px 0 15px 0;
+      border: 1px solid #dadada;
+      background-color: white;
+    }
+  }
+
+  .signInBtn {
+    width: 460px;
+    height: 54px;
+    margin: 30px 0 0 0px;
+    padding: 15px 0px;
+    background-color: #03c75a;
+    color: white;
+    font-size: 18px;
+  }
+}
+
+.good {
+  display: none;
+}
+
+.notGood {
+  display: block;
+}
+
+.nameShort {
+  display: none;
+}
+
+.nameLong {
+  display: block;
+}
+
+.yrShort {
+  display: none;
+}
+
+.yrLong {
+  display: block;
 }
