--- a/src/Pages/Main/MainBottomBanner/MainBottomBanner.scss
+++ b/src/Pages/Main/MainBottomBanner/MainBottomBanner.scss
@@ -3,6 +3,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  width: 100%;
   height: 478.8px;
   padding: 100px;
 }
