--- a/src/Pages/ItemList/ListBox/ListBox.scss
+++ b/src/Pages/ItemList/ListBox/ListBox.scss
@@ -2,14 +2,14 @@
 .itemListContainer {
   .listBox {
     list-style: none;
-    width: 1330px;
+    width: 1380px;
     padding: 0 10px 50px;
-    @include flex(null, null, row);
+    @include flex(center, null, row);
     flex-wrap: wrap;
 
     .itemBox {
       @include flex(center, null, column);
-      width: 262px;
+      width: 262px; //
       padding: 0 15px;
       margin: 20px 0;
 
@@ -18,19 +18,20 @@
       }
 
       .image {
-        width: 232px;
-        height: 232px;
+        width: 232px; //
+        height: 232px; //
         position: relative;
 
         img {
-          width: 100%;
+          height: 100%;
         }
 
         .imageButtonBox {
           position: absolute;
-          top: 162px;
+          top: 162px; //
           padding: 0;
-          left: 61px;
+          margin-left: -54px;
+          left: 50%;
           z-index: 1;
           opacity: 0%;
           transition: opacity 0.8s;
@@ -84,7 +85,7 @@
       }
 
       .itemName {
-        @include flex(null, center, null);
+        @include flex(space-between, center, null);
         margin-top: 14px;
 
         .name {
