ADD: 찜하기 css수정

--- a/src/Pages/ItemList/ListBox/Item/Item.scss
+++ b/src/Pages/ItemList/ListBox/Item/Item.scss
@@ -50,7 +50,7 @@
           }
         }
 
-        .likeChecked {
+        .likeCheckedButtonBox {
           cursor: pointer;
           width: 50px;
           height: 50px;
@@ -58,10 +58,10 @@
           background-color: #f54c4a;
           @include flex(center, center, null);
 
-          .imageInnerLike {
+          .likeChecked {
             width: 21px;
             height: 19px;
-            background: url(https://img-shop.pstatic.net/smartstore/p/static/20200915081326/media/icon_heart_15x13_gray.412edbc4.svg)
+            background: url(https://img-shop.pstatic.net/smartstore/p/static/20200918175251/media/icon_heart_15x13_white.a891e718.svg)
               no-repeat;
             background-size: 100% auto;
             content: '';
