Refactor: 멘토 리뷰 수정 / Add :  메인 마음껏 둘러보세요 부분 레이아웃 추가 및 이미지 위에 마우스 오버시 기능 추가

--- a/src/Pages/Main/MainBottomBanner/MainBottomBanner.scss
+++ b/src/Pages/Main/MainBottomBanner/MainBottomBanner.scss
@@ -1,4 +1,4 @@
-.wrapMainBottomBanner {
+.MainBottomBanner {
   background-image: url('https://shop-phinf.pstatic.net/20200504_67/1588583879437rnq1f_PNG/bg_p.png');
   background-position: center;
   background-repeat: no-repeat;
